--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.15",
+    "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.21.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.7",
     "react-native-gesture-handler": "~2.9.0",
-    "react-native-web": "~0.18.11"
+    "react-native-paper": "^5.7.1",
+    "react-native-reanimated": "^3.1.0",
+    "react-native-web": "~0.18.11",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
