--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-native-check-box": "^2.1.7",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-image-picker": "^5.3.1",
+    "react-native-lightbox": "^0.8.1",
     "react-native-paper": "^5.7.1",
+    "react-native-swiper": "^1.6.0-rc.3",
     "react-native-web": "~0.18.11",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
