--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-paper": "^5.7.1",
     "react-native-swiper": "^1.6.0-rc.3",
     "react-native-web": "~0.18.11",
-    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
+    "react-native-reanimated": "~2.14.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
