--- a/package.json
+++ b/package.json
@@ -22,17 +22,23 @@
     "react-dom": "^18.2.0",
     "react-native": "0.71.7",
     "react-native-check-box": "^2.1.7",
+    "react-native-deck-swiper": "^2.0.14",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-image-picker": "^5.3.1",
     "react-native-lightbox": "^0.8.1",
     "react-native-paper": "^5.7.1",
-    "react-native-swiper": "^1.6.0-rc.3",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-swipe": "^1.0.0",
+    "react-native-swipe-cards": "^0.1.1",
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-swiper": "^1.6.0",
+    "react-native-swiper-flatlist": "^3.2.2",
     "react-native-web": "~0.18.11",
-    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
-    "react-native-reanimated": "~2.14.4"
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react-native-swiper": "^1.5.12"
   },
   "private": true
 }
