--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-picker/picker": "^2.4.10",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
@@ -20,7 +20,7 @@
     "firebase": "^9.21.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.71.7",
+    "react-native": "0.71.8",
     "react-native-chart-kit": "^6.12.0",
     "react-native-check-box": "^2.1.7",
     "react-native-deck-swiper": "^2.0.14",
@@ -37,7 +37,8 @@
     "react-native-web": "~0.18.11",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "victory-native": "^36.6.10",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "@expo/webpack-config": "^18.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
